x-mark on mobile nav + bugfixes

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,8 +17,8 @@ html {
 	display: flex;
 	//justify-content: space-between;
 }
-.nav-open{
-	overflow: hidden;
+.nav-open {
+	overflow-y: scroll;
 	position: fixed;
 }
 .center {
@@ -82,16 +82,18 @@ html {
 		align-items: center;
 		width: 100%;
 	}
-	.fa-bars {
-		font-size: 4rem;
-		padding: 0.5em;
-		position: absolute;
-		right: 20px;
-		transform: translateY(-50%);
-	}
+
 	&__mobile-button {
+		position: absolute;
 		background: transparent;
 		border: none;
+		z-index: 99;
+		right: 20px;
+		.fa-solid {
+			color: $black;
+			font-size: 4rem;
+			padding: 0.5em;
+		}
 	}
 	&__mobile {
 		display: flex;
@@ -104,7 +106,7 @@ html {
 		background-color: $white;
 		width: 100%;
 		height: 100vh;
-		z-index: 99;
+		z-index: 98;
 		transition: transform 0.5s;
 		overflow: hidden;
 		&--active {
